# NAVIN

./: .gitignore  NAVIN_ADMIN_GUIDE.md  NAVIN_APPLICATION_GUIDE.md  README.md  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20260425_1234_91767e5bdc65_initial.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: __init__.py  logger.py
backend/app/models/: __init__.py  session.py  structure.py
backend/app/routers/: __init__.py  admin.py  occupancy.py  qr.py  sensors.py  sessions.py  structures.py
backend/app/schemas/: __init__.py  session.py  structure.py
backend/app/services/: __init__.py  occupancy_service.py  qr_service.py  session_service.py
backend/tests/: conftest.py  test_endpoints.py  test_sessions.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ErrorBoundary.jsx  FloorMap.jsx  OccupancyGrid.jsx  QRCodeDisplay.jsx  QRScanner.jsx  SensorDisplay.jsx
frontend/src/hooks/: useOccupancy.js  useSensors.js
frontend/src/pages/: AdminDashboard.jsx  EntryGate.jsx  ExitGate.jsx  Navigate.jsx  Parked.jsx
frontend/src/services/: api.js
frontend/src/utils/: activityClassifier.js
